add navbar to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Larut Git</title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Us</a></li>
+      </ul>
+    </nav>
     <h1>Ini halaman larut git</h1>
   </body>
 </html>
